--- a/public/404.html
+++ b/public/404.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Redirecting...</title>
-		<script>
-			const path = window.location.pathname;
-			const redirectURL = '/' + (path.startsWith('/portaler/') ? path.slice(9) : path.slice(1));
-			window.location.replace(redirectURL);
-		</script>
-	</head>
-	<body>
-		Redirecting...
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Redirecting...</title>
+    <script>
+      const path = window.location.pathname;
+      const redirectURL =
+        "/" + (path.startsWith("/portaler/") ? path.slice(9) : path.slice(1));
+      window.location.replace(redirectURL);
+    </script>
+  </head>
+  <body>
+    Omdirigerer...
+  </body>
 </html>
